--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </section>
       <section class="left">
-        <h2>🌮 Work History</h2>
+        <h2>
+          <font color="#fcdb03">M</font>
+          <font color="#ffffff"> ROVER</font>
+        </h2>
 
         <h3>McDonalds</h3>
         <p>
