--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         </p>
 
       </section>
-
+      <section class="blank2">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      </section>
       <blockquote>
         <p>Thanks for watching!</p>
       </blockquote>
