--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>John's Website</title>
   </head>
+<meta charset="UTF-8">
   <body>
 
     <canvas id = "bg"></canvas>
@@ -37,6 +38,40 @@
       <section class="blank2">
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </section>
+
+		
+      <section class="right">
+        <h2>
+          <font color="#ffffff">Personal Projects</font>
+        </h2>
+
+        <p>
+			High performance &#128200; and low level &#127899; applications peak my interest.
+        </p>
+        <h3>High Performance &#128640;</h3>
+        <p>
+			<ul style="list-style-type:circle">
+			  <li><a href="https://github.com/jbrhm/CudaLibrary">Cupybara</a>: A high performance BLAS that utlizes <a href="https://developer.nvidia.com/cuda-toolkit">CUDA</a> and <a href="https://edc.intel.com/content/www/us/en/design/ipla/software-development-platforms/client/platforms/alder-lake-desktop/12th-generation-intel-core-processors-datasheet-volume-1-of-2/009/intel-advanced-vector-extensions-2-intel-avx2/">AVX2</a> to accelerate matrix and vector manipulation.</li>
+			  <li>More WGPU</li>
+			</ul>
+        </p>
+        <h3>Low Level &#127898;</h3>
+        <p>
+			<ul style="list-style-type:circle">
+			  <li><a href="https://github.com/jbrhm/CudaLibrary">Pong In Assembly</a>: Fully functional Pong Game written in assembly that interfaces directly to the X11 Server to create a GUI and render all of the game's assets.</li>
+			</ul>
+
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/kc3R4MejQeI?si=sRDF1sNuE7M8_aCW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+		</p>
+        <p>
+			<ul style="list-style-type:circle">
+			  <li><a href="https://github.com/jbrhm/CudaLibrary">Pong In Assembly</a>: Fully functional Pong Game written in assembly that interfaces directly to the X11 Server to create a GUI and render all of the game's assets.</li>
+			  <li>More</li>
+			</ul>
+        </p>
+      </section>
+
       <blockquote>
         <p>Thanks for watching!</p>
       </blockquote>
