--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>
 			<ul style="list-style-type:circle">
 			  <li><a href="https://github.com/jbrhm/CudaLibrary">Cupybara</a>: A high performance BLAS that utlizes <a href="https://developer.nvidia.com/cuda-toolkit">CUDA</a> and <a href="https://edc.intel.com/content/www/us/en/design/ipla/software-development-platforms/client/platforms/alder-lake-desktop/12th-generation-intel-core-processors-datasheet-volume-1-of-2/009/intel-advanced-vector-extensions-2-intel-avx2/">AVX2</a> to accelerate matrix and vector manipulation.</li>
-			  <li>More WGPU</li>
+			  <li>Coming Soon! Orientation Visualizer</li>
 			</ul>
         </p>
         <h3>Low Level &#127898;</h3>
@@ -66,8 +66,7 @@
 		</p>
         <p>
 			<ul style="list-style-type:circle">
-			  <li><a href="https://github.com/jbrhm/CudaLibrary">Pong In Assembly</a>: Fully functional Pong Game written in assembly that interfaces directly to the X11 Server to create a GUI and render all of the game's assets.</li>
-			  <li>More</li>
+			  <li><a href="https://github.com/jbrhm/Allocator">Memory Allocator</a>: An investigation into what <a href="https://www.gnu.org/software/libc/">libc</a> does under the hood when calling malloc and free.</li>
 			</ul>
         </p>
       </section>
