Spinning cubes + better ending

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </section>
 
       <blockquote>
-        <p>Thanks for watching!</p>
+        <p>Thanks for reading!</p>
       </blockquote>
 
 
