--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h3>High Performance &#128640;</h3>
         <p>
 			<ul style="list-style-type:circle">
-			  <li><a href="https://github.com/jbrhm/CudaLibrary">Cupybara</a>: A high performance BLAS that utlizes <a href="https://developer.nvidia.com/cuda-toolkit">CUDA</a> and <a href="https://edc.intel.com/content/www/us/en/design/ipla/software-development-platforms/client/platforms/alder-lake-desktop/12th-generation-intel-core-processors-datasheet-volume-1-of-2/009/intel-advanced-vector-extensions-2-intel-avx2/">AVX2</a> to accelerate matrix and vector manipulation.</li>
+			  <li><a href="https://github.com/jbrhm/CudaLibrary">Cupybara</a>: A high performance BLAS that utlizes <a href="https://developer.nvidia.com/cuda-toolkit">CUDA</a> </li>
 			  <li>Coming Soon! Orientation Visualizer</li>
 			</ul>
         </p>
