--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h3>Low Level &#127898;</h3>
         <p>
 			<ul style="list-style-type:circle">
-			  <li><a href="https://github.com/jbrhm/CudaLibrary">Pong In Assembly</a>: Fully functional Pong Game written in assembly that interfaces directly to the X11 Server to create a GUI and render all of the game's assets.</li>
+			  <li><a href="https://github.com/jbrhm/AssemblyGame">Pong In Assembly</a>: Fully functional Pong Game written in assembly that interfaces directly to the X11 Server to create a GUI and render all of the game's assets.</li>
 			</ul>
 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/kc3R4MejQeI?si=sRDF1sNuE7M8_aCW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
